# agent_buy

./: .env  .env.example  .gitignore  README.md  main.py  pyproject.toml
backend/: __init__.py  config.py  exceptions.py  main.py
backend/agents/: __init__.py
backend/api/: __init__.py
backend/api/routes/: fornecedores.py
backend/api/schemas/: fornecedor.py
backend/core/: database.py
backend/domain/fornecedor/: models.py
backend/services/: fornecedor.py
backend/tests/: test_conn_db.py
docker/: docker-compose.yml
docs/: cronologia.md  mapeamento_crud_fornecedores.md  requisitos.md
sql/: create_schemas.sql
sql/dev/: create_table_fornecedor.sql
sql/prd/: create_table_fornecedor.sql
